--- a/StudentInformation/Views/Student/Edit.cshtml
+++ b/StudentInformation/Views/Student/Edit.cshtml
@@ -35,8 +35,8 @@
         <span asp-validation-for="ContactNumber" class="text-danger"></span>
     </div>
 
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex gap-2 align-items-center">
         <button type="submit" class="btn" style="background-color: teal; color: white;">Save</button>
-        <button type="button" class="btn btn-light" data-bs-dismiss="modal" aria-label="Cancel" style="border: 1px solid teal; color: teal;">Cancel</button>
+        <a asp-action="Index" asp-controller="Student" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
